syntax = "proto3";

package cc.insidious.lootify.utilities.item;


message ItemStack {
  // Basic item data
  string type = 1;
  int32 amount = 2;
  int32 durability = 3;
  // Display metadata
  DisplayMeta display = 4;

  // Item-specific metadata
  oneof special_meta {
    BookMeta book = 5;
    LeatherArmorMeta leather = 6;
    SkullMeta skull = 7;
    PotionMeta potion = 8;
    MapMeta map = 9;
    FireworkMeta firework = 10;
    BannerMeta banner = 11;
  }

  string nbtData = 12;
}

message ItemStackArray {
  repeated ItemStack items = 1;
}

message DisplayMeta {
  string display_name = 1;
  repeated string lore = 2;
}

message BookMeta {
  string title = 1;
  string author = 2;
  repeated string pages = 3;
}

message LeatherArmorMeta {
  int32 red = 1;
  int32 green = 2;
  int32 blue = 3;
}

message SkullMeta {
  string owner = 1;
}

message PotionMeta {
  repeated PotionEffect effects = 1;
}

message PotionEffect {
  int32 type = 1;
  int32 duration = 2;
  int32 amplifier = 3;
  bool ambient = 4;
}

message MapMeta {
  bool scaling = 1;
}

message FireworkMeta {
  int32 power = 1;
  repeated FireworkEffect effects = 2;
}

message FireworkEffect {
  enum Type {
    BALL = 0;
    BALL_LARGE = 1;
    STAR = 2;
    CREEPER = 3;
    BURST = 4;
  }

  Type type = 1;
  repeated int32 colors = 2;
  repeated int32 fade_colors = 3;
  bool flicker = 4;
  bool trail = 5;
}

message BannerMeta {
  int32 base_color = 1;
  repeated Pattern patterns = 2;
}

message Pattern {
  int32 color = 1;
  int32 pattern_type = 2;
}